Fix spacing on mirador load windwo

--- a/client/views/desk/desk.less
+++ b/client/views/desk/desk.less
@@ -31,3 +31,9 @@
 .mirador-status-bar-msg-left, .mirador-status-bar-msg-right {
   padding: 0px 10px;
 }
+
+.mirador-listing-collections li {
+  padding: 10px 5px;
+  width: 150px;
+
+}
